Modify pytest command to include HTML report
Update Playwright test command to generate HTML report.

--- a/.github/workflows/test-playwright.yml
+++ b/.github/workflows/test-playwright.yml
@@ -25,5 +25,5 @@ jobs:
           python -m playwright install-deps
 
       - name: Run Playwright tests
-        run: pytest -s
+        run: pytest --html=reports/report.html --self-contained-html
 
