--- a/.github/workflows/test-playwright.yml
+++ b/.github/workflows/test-playwright.yml
@@ -27,3 +27,10 @@ jobs:
       - name: Run Playwright tests
         run: pytest --html=reports/report.html --self-contained-html
 
+      - name: Upload Test Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: html-test-report
+          path: reports/
+
+
