--- a/.github/workflows/test-playwright.yml
+++ b/.github/workflows/test-playwright.yml
@@ -32,5 +32,15 @@ jobs:
         with:
           name: html-test-report
           path: reports/
+          
+      - name: Upload Traces and Videos
+        uses: actions/upload-artifact@v4
+        with:
+          name: traces-and-videos
+          path: |
+            traces/
+            videos/
+            downloads/
+
 
 
