Improve workspace cleanup in test-playwright.yml
Enhanced the clean workspace step to remove cached files and directories.

--- a/.github/workflows/test-playwright.yml
+++ b/.github/workflows/test-playwright.yml
@@ -16,6 +16,14 @@ jobs:
       - name: Clean workspace
         run: |
           rm -rf *
+      - name: Clean workspace thoroughly
+        run: |
+          git rm -r --cached . || true
+          rm -rf * || true
+          rm -rf .pytest_cache || true
+          rm -rf __pycache__ || true
+          rm -rf */__pycache__ || true
+
 
       - name: Checkout code again
         uses: actions/checkout@v4
